Update, add logic for meter, tracer, logs, instrumentation
add creation de server prometheus and grafana from docker compose file

improve init server when it deside
