# grpcservice/app/server/server.go
@@ -1,8 +1,6 @@
 package grpcserverinit
 
 import (
-	"context"
-	services "ecs_govel/grpcservice/gen/services/v1"
 	conn "ecs_govel/grpcservice/gen/services/v1/servicesv1connect"
 	"fmt"
 	"net/http"
@@ -13,48 +11,14 @@ import (
 	"connectrpc.com/connect"
 	"connectrpc.com/validate"
 	"connectrpc.com/vanguard"
+	"github.com/Cyprinus12138/otelgin"
 	"github.com/gin-gonic/gin"
-	"google.golang.org/protobuf/types/known/emptypb"
 )
 
-type ProductService struct{}
-
-func (srv *ProductService) CreateProduct(ctx context.Context, reqWrapper *connect.Request[services.CreateProductRequest]) (*connect.Response[services.CreateProductResponse], error) {
-	resp := &services.CreateProductResponse{}
-
-	req := reqWrapper.Msg
-	resp.SetProduct(req.GetProduct())
-	msg := strings.Builder{}
-	msg.WriteString("Product with name: " + req.GetProduct().GetName() + " has been created")
-
-	resp.SetMsg(msg.String())
-
-	return connect.NewResponse(resp), nil
-}
-
-func (srv *ProductService) GetProduct(ctx context.Context, reqWrapper *connect.Request[services.GetProductRequest]) (*connect.Response[services.GetProductResponse], error) {
-
-	return connect.NewResponse(&services.GetProductResponse{}), nil
-}
-
-func (srv *ProductService) GetProducts(ctx context.Context, req *connect.Request[emptypb.Empty]) (*connect.Response[services.GetProductsResponse], error) {
-	// get header
-	fmt.Printf("X-User-ID: %s\n", req.Header().Get("X-User-ID"))
-
-	return connect.NewResponse(&services.GetProductsResponse{}), nil
-}
-
-func (srv *ProductService) UpdateProduct(ctx context.Context, reqWrapper *connect.Request[services.UpdateProductRequest]) (*connect.Response[services.UpdateProductResponse], error) {
-
-	return connect.NewResponse(&services.UpdateProductResponse{}), nil
-}
-
-func (srv *ProductService) DeleteProduct(ctx context.Context, reqWrapper *connect.Request[services.DeleteProductRequest]) (*connect.Response[services.DeleteProductResponse], error) {
-
-	return connect.NewResponse(&services.DeleteProductResponse{}), nil
-}
-
 func globalsMiddleware(g *gin.Engine) {
+	// register instrumentation of metrics and tracing
+	g.Use(otelgin.Middleware("productsapi"))
+
 	g.Use(func(c *gin.Context) {
 		fmt.Printf("Call request: %s %s\n", c.Request.Method, c.Request.URL.Path)
 		c.Next()
@@ -62,8 +26,13 @@ func globalsMiddleware(g *gin.Engine) {
 }
 
 func InitGrpcService() {
+	if c_.GRPC_SERVER_PORT == "" {
+		return
+	}
+
 	interceptors := connect.WithInterceptors(
 		validate.NewInterceptor(),
+		c_.GetOtelInterceptor(),
 	)
 
 	path, handler := conn.NewProductServiceHandler(
@@ -81,8 +50,12 @@ func InitGrpcService() {
 		panic(fmt.Sprintf("failed to create transcoder: %v", err))
 	}
 
-	gin.SetMode(gin.DebugMode)
-	// routerGin := gin.Default()
+	if strings.ToLower(c_.APP_MODE) == "production" {
+		gin.SetMode(gin.ReleaseMode)
+	} else {
+		gin.SetMode(gin.DebugMode)
+	}
+
 	routerGin := c_.GetEngine()
 
 	globalsMiddleware(routerGin)
@@ -92,12 +65,14 @@ func InitGrpcService() {
 	// routes for anotations proto
 	routerGin.Any("/productsapi/*any", gin.WrapH(transcoder))
 
+	addr := fmt.Sprintf("localhost:%s", c_.GRPC_SERVER_PORT)
 	s := http.Server{
-		Addr:      "localhost:8080",
+		Addr:      addr,
 		Handler:   routerGin,
 		Protocols: c_.CreateProtoHTTP2NotTLS(),
 	}
 
+	c_.Log.Sub("server").Infof("Start rpc server at: %s\n", addr)
 	err = s.ListenAndServe()
 	if err != nil {
 		panic(err)
